# Projetc_NewBie

./: BMI.py  C++Primer Plus.cpp  Calculator.cpp  README.md  caculate.cpp  公约数.py  勾股数.py  口算闯关.py  类的练习.py  练习.py  解二次方程.py
C++/: Caculator.cpp  Firt Progect.7z  Fraction.cpp  KMPstr.cpp  Mille_Rabin.cpp  Mille_Rabin素性检验.cpp  bigNumComputeFunction.cpp  calculate.cpp  de.cpp  ggs.cpp  loc.cpp  maptest.cpp  masterpice.cpp  road.cpp  sads.cpp  sundaystr.cpp  sunday字符串匹配.cpp  test.cpp  zuoye.cpp  进制转换.cpp  高精度计算.cpp
C++/Firt Progect/: CMakeLists.txt  data  log  statistic
C++/Firt Progect/include/: goods.h
C++/Firt Progect/src/: function.cpp  function.h  goods.cpp
C++/Inventory Management System/: CMakeLists.txt
C++/Inventory Management System/include/: function.h  goods.h
C++/first_try_QT/: first_try_QT_zh_CN.ts
C++/linear algebra calculator/: CMakeLists.txt
C++/linear algebra calculator/include/: Base.h  Calculate.h  Determinant.h  Fraction.h  Matix.h
C++/linear algebra calculator/src/: Determinant.cpp  Fraction.cpp  Matix.cpp  base.cpp  main.cpp
C++/线性代数计算器/src/: base.cpp
C++QA/: NxNQueens.cpp  exam1.cpp  exam2.cpp  exam3.cpp  exam4.cpp  exam5.cpp  exam6.cpp  exam7.cpp  exam8.cpp  我的支撑树.cpp  计算机.cpp
C++selfDef/: exa3.cpp  exam.cpp  exam2.cpp  exam3.cpp  multiset.cpp  order.cpp  output.cpp  primenum.cpp
HTML/: test.html  技术部canvas时钟注释版.html  腾讯视频下载.html
Node.js/: demo.js
Python/: BMI.py  公约数.py  勾股数.py  口算闯关.py  多态.py  测试.py  特殊属性.py  特殊方法.py  类的练习.py  练习.py  解二次方程.py  贪吃蛇.py
PythonQA/: P1042 乒乓球.py  P5703 苹果采购.py  exam.py  简单A+B.py
(+3 files in other folders)
